--- a/requirements.txt
+++ b/requirements.txt
@@ -61,3 +61,4 @@ webencodings==0.5.1
 sphinx_reredirects==0.1.3
 sphinx-notfound-page==1.0.0
 # sphinx_last_updated_by_git==0.3.6
+linuxdoc==20240924
